* new probe programming interface -- niko
 - more strict config file checking giving helpful error messages when necessary
 - generate probe documentation automatically from the code
 - eliminate PROBE_CONF sections
 - several minor incompatible probe changes; see the smokeping_upgrade document for details 
* allow target-specific vars get defaults from Probes section -- niko
* timeout fixes in basefork.pm -- niko
* config file examples and smokeping_examples document -- niko
* documentation updates and reorganizing -- niko
* move all smokeping-specific perl modules into the Smokeping namespace -- niko
* new commandline options '--config=X' and '--check' -- niko
* FPing: support "-t", "-p" and "-i" fping params -- Chris Wilson <chris *aidworld.org>
* FPing6: test against ::1 instead of localhost -- Sebastian Wiesinger <smokeping *tracker.fire-world.de>
* fix for basefork.pm IO::Select property has_exception is very platform dependent
  by ignoring it altogether things actually work better. Especially on Solaris which
  does have propper support for has_exception as oposed to linux. --  Niko Tyni <ntyni *iki.fi>
  
2005/1/30 -- 1.38

* fixed error messages for environments with mixed ipv6 and ipv4 setups  -- Peter W. Osel <pwo *Infineon.COM>
* fixed smoke coloring for 5 pings problem -- Tobi
* fixed User-Agent example in Curl probe -- Sebastian Wiesinger <smokeping *tracker.fire-world.de>

2005/1/12 -- 1.37

* base class did assume that concurrent probes were off by default
  -- Niko Tyni <ntyni *iki.fi>

2005/1/7 -- 1.36 (1.35 was an internal release)

* concurrent probes are default now, together with
  a 'random' offset to make sure not all smokepings hit the net
  at the same time -- Tobi
* fixes for loggin -- Niko Tyni <ntyni *iki.fi>
 - warn if no logging method is active while daemonizing.
 - turn debugging on before loading the config file.
 - make do_debuglog a no-op if $use_debuglog isn't set
 - add debug info to FPing* probes